Bug 147523 - unable to expand formula region in calc using mouse in 7.4 (kf5)
Summary: unable to expand formula region in calc using mouse in 7.4 (kf5)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.4.0.0 alpha0+
Hardware: All Linux (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.4.0 target:7.3.3
Keywords: bibisected, bisected, regression
: 148588 (view as bug list)
Depends on:
Blocks: KDE, KF5
  Show dependency treegraph
 
Reported: 2022-02-18 18:52 UTC by elias estatistics
Modified: 2022-04-14 11:05 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description elias estatistics 2022-02-18 18:52:09 UTC
I am totally unable to expand formula region in calc using mouse in 7.4 but not such problem in 7.1.3. Is there any other way to expand formula tab? 

here is a video of my tries: https://ufile.io/gs1t6a05 (ogv format)

It may specific to my system. dont know. 

Version: 7.4.0.0.alpha0+ / LibreOffice Community
Build ID: 58ac3288b5a4a1f1f9b21fed4f4c1ab06dd43db9
CPU threads: 4; OS: Linux 5.11; UI render: default; VCL: kf5 (cairo+xcb)
Locale: el-GR (el_GR.UTF-8); UI: en-US
Calc: threaded Jumbo
Comment 1 m_a_riosv 2022-02-20 15:20:41 UTC
Please attach a sample file and detail the steps to reproduce.
Comment 2 elias estatistics 2022-02-20 16:12:42 UTC
I am very disappointed when some people dont read the description of bug!!! Please read more carefully bugs. I can totally understand that you give your free time here, and thank all, but please, read bug descriptions more carefully. 

Not all bugs need attachment (except you specify what to attach in such case???). What attachment to attach when i have an empty spreadsheet? what steps to reproduce you mean when i try to expand formula tab as shown in the video by mouse? This is the only step as shown in the related video.
Comment 3 QA Administrators 2022-02-21 03:34:49 UTC Comment hidden (obsolete)
Comment 4 raal 2022-02-22 17:03:22 UTC
No problem in Version: 7.4.0.0.alpha0+ / LibreOffice Community
Build ID: 0723b41bed9bb4ad50d2993744a60177966d1a21
CPU threads: 4; OS: Linux 5.13; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded Jumbo
Comment 5 Kevin Suo 2022-03-01 15:19:05 UTC
No problem in

Version: 7.4.0.0.alpha0+ / LibreOffice Community
Build ID: 6961f6732954742415413fa53bdeebd1b03d9ec5
CPU threads: 8; OS: Linux 5.16; UI render: default; VCL: gtk3
Locale: zh-CN (zh_CN.UTF-8); UI: zh-CN
Build Platform: Fedora34@X64, Branch:master, bibisect-linux-64-7.4-CN
Calc: threaded

Fedora 34 either.

May be KDE specific?

@elias estatistics please specify your operating system, desktop environment (Gnome/KDE/XFACE/LXDE) and version.
Comment 6 elias estatistics 2022-03-01 19:46:32 UTC
either Experimental features on / off, same behaviour.

Mouse is unable to grab steadily formula bar and to expand it. 

I have nouveau drivers. Dont know if this play a role. 

Version: 7.4.0.0.alpha0+ / LibreOffice Community
Build ID: 58ac3288b5a4a1f1f9b21fed4f4c1ab06dd43db9
CPU threads: 4; OS: Linux 5.11; UI render: default; VCL: kf5 (cairo+xcb)
Locale: el-GR (el_GR.UTF-8); UI: en-US
Calc: threaded


LSB Version:	core-11.1.0ubuntu2-noarch:security-11.1.0ubuntu2-noarch
Distributor ID:	Debian
Description:	Debian GNU/Linux 11 (bullseye)
Release:	11
Codename:	bullseye
Comment 7 Scott Clewell 2022-03-16 00:45:51 UTC
Greetings Elias,

Thanks for taking the time to report. I have had similar results but noticed if I move the mouse very slow the formula bar responds. The faster I moved my mouse, the worse the behavior. This is obviously not optimal.

When you get a moment, please retest to see if this is repeatable for you as well.
I have set status to NEEDINFO for now until you have time to confirm.

When you can reply, I'd recommend setting the status to UNCONFIRMED so this issue stays visible.

Tested with:
Version: 7.4.0.0.alpha0+ / LibreOffice Community
Build ID: cb56edb177f4db5b9cc4d140543c4b11d41ef1b0
CPU threads: 16; OS: Linux 5.13; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 8 elias estatistics 2022-03-16 12:19:06 UTC
Are you using Kubuntu / Bullseye version? 

No! 

Also, i have another problem, all graphs when moved, are "attached" to the horizontal bar under formula bar and i cannot dettach them. I am not opening new bug. You can test that too?

Also, i have other "unique" bugs reported elsewhere... 
@ able with a title above it, double click on the title and writer crashes in 7.4 and previous editions. 

If you need video or anything else, tell me.
Comment 9 elias estatistics 2022-03-16 12:20:04 UTC
*table
Comment 10 QA Administrators 2022-03-17 03:36:20 UTC Comment hidden (obsolete)
Comment 11 Scott Clewell 2022-03-21 00:35:08 UTC
Hello Elias,

I can confirm that the bug is identical to your video and present in master.

 Version: 7.4.0.0.alpha0+ / LibreOffice Community

Build ID: 59a7c40255b836ed75e64686fabb3e9938b755f0

CPU threads: 1; OS: Linux 5.13; UI render: default; VCL: kf5 (cairo+xcb)

Locale: en-US (en_US.UTF-8); UI: en-US

Calc: threaded
Comment 12 elias estatistics 2022-03-21 10:41:52 UTC

at the latest daily build yesterday, formula bar cannot expanded BUT charts are not "touched" at grid line of formula bar. 


Version: 7.4.0.0.alpha0+ / LibreOffice Community
Build ID: 566ee17c2709f9939145ddc7fbb1d61c35049321
CPU threads: 4; OS: Linux 5.11; UI render: default; VCL: kf5 (cairo+xcb)
Locale: el-GR (el_GR.UTF-8); UI: en-US
Calc: threaded Jumbo
Comment 13 Buovjaga 2022-04-03 18:45:54 UTC
Bibisected with linux-64-7.4 to https://git.libreoffice.org/core/commit/e63fe68fb1d0915b64fdf63f7fa6eed866fa3a0d
Qt use asChild for pointer positioning

Adding Cc: to Jan-Marek Glogowski

Action step as video is gone: grab the edge between the formula bar and the column headers, so cursor changes and try to drag down.
Comment 14 Commit Notification 2022-04-04 15:36:29 UTC
Jan-Marek Glogowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/cec215e0e3adaf26c89c4ffbaa53f87481772f0c

tdf#147523 Qt use inner QWidget to set pointer pos

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 Commit Notification 2022-04-05 08:05:15 UTC
Jan-Marek Glogowski committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/95cf002cbc5c4d51f2e15b6e1bbda31f86c03a88

tdf#147523 Qt use inner QWidget to set pointer pos

It will be available in 7.3.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 16 Buovjaga 2022-04-07 12:26:17 UTC
Verified, thanks

Arch Linux 64-bit
Version: 7.4.0.0.alpha0+ / LibreOffice Community
Build ID: ff2f433cdfda74dbf69a11342a98ccbfb5bc6a72
CPU threads: 8; OS: Linux 5.17; UI render: default; VCL: kf5 (cairo+xcb)
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: threaded Jumbo
Built on 7 April 2022
Comment 17 Buovjaga 2022-04-14 11:05:08 UTC
*** Bug 148588 has been marked as a duplicate of this bug. ***